Working through JSONTable. Q1 Done